fix: subSidebar scrollbar scss

--- a/Desktop/components/SubSidebar/SubSidebar.module.scss
+++ b/Desktop/components/SubSidebar/SubSidebar.module.scss
@@ -3,9 +3,7 @@
     border-right: 1px solid var(--Gray6);
     padding-right: 8px;
     grid-area: subSidebar;
-}
 
-.SubSidebarWrapper {
     position: sticky;
     height: 100vh;
     top: 0;
